--- a/app/assets/stylesheets/components/ui/_teaser.scss
+++ b/app/assets/stylesheets/components/ui/_teaser.scss
@@ -7,16 +7,9 @@
 
 .teaser-box__group-title {
   @include body(22, 24);
-  margin: 0 $baseline-unit*2 $baseline-unit*2;
+  margin: 0 $baseline-unit $baseline-unit*2;
 }
 
-.teaser-box__group-content {
-  @include respond-to($mq-s) {
-    .object-fit & {
-      display: flex;
-    }
-  }
-}
 
 .teaser-box {
   margin-bottom: $baseline-unit*2;
@@ -36,6 +29,14 @@
   }
 }
 
+.teaser-box__group-content {
+  @include respond-to($mq-s) {
+    .object-fit & {
+      display: flex;
+    }
+  }
+}
+
 .teaser-box__image {
   @include column(12);
 
@@ -44,15 +45,23 @@
   }
 }
 
-.teaser-box__title {
-  margin: $baseline-unit*2 $baseline-unit $baseline-unit;
-}
-
 .teaser-box__content {
   @include column(12);
+  padding: $baseline-unit*2 $baseline-unit;
+  .object-fit & {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 2;
+  }
+}
+
+.teaser-box__title {
+  margin-bottom: $baseline-unit;
+}
+
+.teaser-box__content-text { 
   @include body(14, 22);
-  margin: 0 $baseline-unit $baseline-unit*2 $baseline-unit;
-  padding: 0;
+  margin: 0 0 $baseline-unit*2;   
 
   .object-fit & {
     flex: 1 0 auto;
@@ -63,7 +72,6 @@
 .teaser-box__cta {
   @include body(14, 24);
   display: block;
-  margin: $baseline-unit;
   padding: $baseline-unit/2;
 }
 
@@ -80,9 +88,6 @@
   }
 
   .teaser-box__image {
-    @include column(12);
-    float: left;
-
     @include respond-to($mq-m) {
       width: 50%;
 
@@ -93,27 +98,13 @@
   }
 
   .teaser-box__content {
-    @include column(12);
-    padding: 0 $baseline-spacing;
+    padding: $baseline-unit*2 $baseline-unit*2;
 
     @include respond-to($mq-m) {
       .object-fit & {
         flex: 1;
       }
     }
-  }
-
-  .teaser-box__title {
-    margin: $baseline-spacing 0 0;
-  }
-
-  .teaser-box__content-text { 
-    margin-top: 0;   
-    padding: $baseline-unit 0;
-  }
-
-  .teaser-box__cta {
-    margin: $baseline-unit 0;
   }
 }
 
